minor refactors